# KewlEditor

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TextBox.c  TextBox.h  TextLine.c  TextLine.h  UTFString.c  UTFString.h  main.c
SDL2-2.24.0/lib/: libSDL2-2.0.so.0  libSDL2-2.0.so.0.2400.0
SDL2-2.24.0/lib/cmake/SDL2/: SDL2ConfigVersion.cmake  SDL2Targets-release.cmake  SDL2staticTargets.cmake
SDL2-2.24.0/lib/pkgconfig/: sdl2.pc
SDL2_ttf-2.20.1/lib/cmake/SDL2_ttf/: SDL2_ttf-static-targets-noconfig.cmake  SDL2_ttf-static-targets.cmake  SDL2_ttfConfig.cmake  SDL2_ttfConfigVersion.cmake
UTF8String/: UTFString.c  UTFString.h
src/: OS.c  OS.h  OSEvent.c  TextBox.c  TextBox.h  TextLine.c  TextLine.h  main.c
src/linux/: LinuxMain.c  LinuxMain.h
src/windows/: WindowsMain.c  WindowsMain.h
